--- a/package.json
+++ b/package.json
@@ -8,11 +8,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-asset": "~8.2.1",
+    "expo-cli": "^4.1.6",
+    "expo-constants": "~9.3.3",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "install": "^0.13.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
