--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "child_process": false
   },
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "https://42d7d2929136.ngrok.io",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,15 +19,18 @@
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.3",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3"
   },
